# Calculator

./: README.md
calculator/: CMakeLists.txt
calculator/calculator/: CMakeLists.txt  calculator.cpp  calculator.h  error.h  token.h
calculator/calculator/calculation/: calculation.h
calculator/calculator/dllFunction/: CMakeLists.txt  plugins_loader.h
calculator/calculator/dllFunction/ln/: CMakeLists.txt  ln.cpp
calculator/calculator/dllFunction/pow/: CMakeLists.txt  power.cpp
calculator/calculator/dllFunction/trigonometry/: CMakeLists.txt
calculator/calculator/dllFunction/trigonometry/cosinus/: CMakeLists.txt  cosin.cpp
calculator/calculator/dllFunction/trigonometry/sinus/: CMakeLists.txt  sinus.cpp
calculator/calculator/eval/: eval.h
calculator/calculator/operations/: description_operator.h  operation.h
calculator/calculator/parser/: parser.cpp  parser.h
calculator/calculator/scanner/: scanner.cpp  scanner.h
calculator/doxygen/html/: annotated.html  calculator.chm  calculator_8cpp_source.html  calculator_8h_source.html  classerror-members.html  classerror.html  classes.html  error_8h_source.html  files.html  functions.html  functions_enum.html  functions_func.html  functions_vars.html  index.hhc  index.hhk  index.hhp  index.html  structcontent__t-members.html  structcontent__t.html  structtoken__t-members.html  structtoken__t.html  token_8h_source.html
